@@ -337,6 +337,9 @@ static void info_close( unsigned int wid, const char *str )
    if (info_wid > 0) {
       info_lastTab = window_tabWinGetActive( info_wid, "tabInfo" );
 
+      /* Update weapon sets. */
+      pilot_weaponSafe( player.p );
+
       /* Copy weapon sets over if changed. */
       ws_copy( player.ps.weapon_sets, player.p->weapon_sets );
 
