@@ -33,8 +33,8 @@ void pilot_weapSetUpdate( Pilot* p );
 PilotWeaponSet* pilot_weapSet( Pilot* p, int id );
 const char *pilot_weapSetName( Pilot* p, int id );
 const char *pilot_weapSetTypeName( WeaponSetType t );
-void pilot_weapSetAdd( Pilot* p, int id, PilotOutfitSlot *o, int level );
-void pilot_weapSetRm( Pilot* p, int id, PilotOutfitSlot *o );
+void pilot_weapSetAdd( Pilot* p, int id, const PilotOutfitSlot *o, int level );
+void pilot_weapSetRm( Pilot* p, int id, const PilotOutfitSlot *o );
 void pilot_weapSetClear( Pilot* p, int id );
 int pilot_weapSetInSet( Pilot* p, int id, const PilotOutfitSlot *o );
 int pilot_weapSetCheck( Pilot* p, int id, const PilotOutfitSlot *o );
