@@ -18,6 +18,7 @@
    * Buffed Scanning Combat AI to have an additional +15% tracking
    * Pirates should no longer have presence in Sol under certain conditions
    * Buffed weapon ionizer to only -50% damage from -70% damage
+   * Made weapon sets more robust to changes
    * `srs_ferry`: fixed marker not updating for alternative delivery locations
    * `nelly03`: guard against the player changing systems in the middle of mining
    * `zbh06`: made mission easier for the player
